--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.0",
@@ -23,11 +25,13 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
+    "emoji-mart": "^5.6.0",
     "env-schema": "^6.0.1",
     "googleapis": "^148.0.0",
     "immer": "^10.1.1",
     "jose": "^6.0.10",
     "merge-refs": "^2.0.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-safe-action": "^7.10.4",
