update ui for auth ok

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
       "name": "instagram",
       "connectString": "postgresql://neondb_owner:L5SNfa8kQFrD@ep-misty-bush-a1sw28at.ap-southeast-1.aws.neon.tech/instagram?sslmode=require"
     }
-  ]
+  ],
+  "cSpell.words": ["Amrad", "Arridha", "embla", "Nextgram"]
 }
