--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "env-schema": "^6.0.1",
     "googleapis": "^148.0.0",
     "immer": "^10.1.1",
