--- a/package.json
+++ b/package.json
@@ -11,34 +11,30 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.0",
     "@node-rs/argon2": "^2.0.2",
     "@oslojs/encoding": "^1.1.0",
-    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-virtual": "^3.13.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
-    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.2",
     "env-schema": "^6.0.1",
     "googleapis": "^148.0.0",
     "immer": "^10.1.1",
     "jose": "^6.0.10",
     "merge-refs": "^2.0.0",
-    "motion": "^12.6.3",
-    "next": "15.2.4",
+    "motion": "^12.6.5",
+    "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
-    "next-safe-action": "^7.10.4",
+    "next-safe-action": "^7.10.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
     "pinata-web3": "^0.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -47,7 +43,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5",
     "react-use-measure": "^2.1.7",
-    "sharp": "^0.34.0",
+    "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
@@ -55,13 +51,15 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "drizzle-kit": "^0.30.6",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
