--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,12 @@
       "connectString": "postgresql://neondb_owner:L5SNfa8kQFrD@ep-misty-bush-a1sw28at.ap-southeast-1.aws.neon.tech/instagram?sslmode=require"
     }
   ],
-  "cSpell.words": ["Amrad", "Arridha", "embla", "Nextgram", "notif"]
+  "cSpell.words": [
+    "Amrad",
+    "Arridha",
+    "embla",
+    "headlessui",
+    "Nextgram",
+    "notif"
+  ]
 }
