--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "motion": "^12.7.4",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^4.0.2",
     "next-safe-action": "^7.10.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
