--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:migrate": "npx drizzle-kit generate && npx tsx ./src/lib/drizzle/migrate.ts",
-    "db:studio": "npx drizzle-kit studio"
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
@@ -19,11 +17,9 @@
     "@tanstack/react-virtual": "^3.13.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.12.2",
-    "env-schema": "^6.0.1",
     "googleapis": "^148.0.0",
     "immer": "^10.1.1",
     "jose": "^6.0.10",
@@ -31,7 +27,7 @@
     "motion": "^12.7.4",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.25",
-    "next-intl": "^4.0.2",
+    "next-intl": "^4.0.3",
     "next-safe-action": "^7.10.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
@@ -59,7 +55,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "drizzle-kit": "^0.31.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
