--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "nodemailer": "^6.10.1",
+    "pinata": "^2.2.1",
     "pinata-web3": "^0.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
