--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.12.2",
     "googleapis": "^148.0.0",
+    "imagekit": "^6.0.0",
     "immer": "^10.1.1",
     "jose": "^6.0.10",
     "merge-refs": "^2.0.0",
